--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "nodemon": "nodemon src/"
+    "start": "node server/index.js",
+    "nodemon": "nodemon server/",
+    "build": "webpack",
+    "dev": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
     "@sendgrid/mail": "^7.1.0",
+    "axios": "^0.19.2",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.1.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -19,8 +29,15 @@
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
     "multer": "^1.4.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "sharp": "^0.25.2",
-    "validator": "^13.0.0"
+    "validator": "^13.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
