--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.1.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
