--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["@babel/env", "@babel/react"],
   "plugins": [
     "@babel/proposal-object-rest-spread",
-    "@babel/proposal-class-properties"
+    "@babel/proposal-class-properties",
+    "@babel/transform-runtime"
   ]
 }
